  searches (bug #3522497, patch #3543524 Malathi)

- The macro Display_Abbreviations was broken (#3539691 Matthieu Casanova)

- Fix pressing return in parent files of the VFS browser that do not
  browse the selected folder as it should (patch #3543499 by Eric Le Lay)

}}}
{{{ API

- New method MiscUtilities.openInDesktop() (Alan Ezust)

}}}
{{{ UI

- Added a new German keymap. Replaced shortcuts that were unreachable
  on a german keyboard. Moved shortcuts from German localization into
  keymap. (#3572796 Björn "Vampire" Kautler)

- Translate underscores to spaces when displaying keymap names in the UI to
  eliminate files with spaces in the name. (Björn "Vampire" Kautler)

- Fix broken keymap properties (Björn "Vampire" Kautler)

- Added russian localization (patch #3544154 Vladimir Avdonin)

}}}
{{{ Miscellaneous

- Correctly determine whether Look and Feel did change to not touch it if it
  stays the same as this might cause delays and Exceptions.
  (Björn "Vampire" Kautler)

- The .jedit/modes/catalog is now written using UTF-8 instead of default
  OS encoding (#3560800 Matthieu Casanova)

}}}

}}}


{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
Martin Raspe, Max Funk, SPennington, Ingo Tomahogh, Jarek Czekalski, Jojaba,
Stephen Blackheath, Milan Černil, Makarius, Chris Sullins, Peter C. Chapin,
Tom Power and Donovaly for contributing to this release.

{{{ Bug fixes

- Fixed exception in dockable window system when loading a plugin using
  jar libraries (#3532429 Matthieu Casanova)

- The plugin description in install panel now supports html
  (#3509183 Matthieu Casanova)

- The mirror "Plugin Central default" now works as auto selecting
  mirror and is used by default. Previous default was hardcoded "switch"
  (mirror.switch.ch) as workaround, but one could easily stuck on broken
  "Plugin Central default" and got strange errors.